
hdrs = [
    'cusp.cuh',
    'absolute_value.cuh',
    'add_const.cuh',
    'add.cuh',
    'and.cuh',
    'complex_to_mag_squared.cuh',
    'complex_to_mag.cuh',
    'conjugate.cuh',
    'copy.cuh',
    'divide.cuh',
    'exponentiate.cuh',
    'fft_shift.cuh',
    'kernel.cuh',
    'multiply_const.cuh',
    'multiply.cuh',
    'nlog10.cuh',
    'not.cuh',
    'or.cuh',
    'xor.cuh',
    'convolve.cuh',
    'dot_product.cuh',
    'deinterleave.cuh',
    'channelizer.cuh'
]
install_headers(hdrs, subdir : 'cusp')